--- a/city.html
+++ b/city.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Airline Company - Passengers</title>
+  <title>Airline Company - City</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,42 +21,36 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/frontend/index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Passengers</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="passengers.html" class="nav-link">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="staff.html" class="nav-link">Staff</a></li>
         <li class="nav-item"><a href="airplane.html" class="nav-link">Airplanes</a></li>
-        <li class="nav-item"><a href="city.html" class="nav-link">City</a></li>
+        <li class="nav-item"><a href="#" class="nav-link active">City</a></li>
       </ul>
     </header>
   </div>
   <div class="container">
-    <h2>Passengers Information</h2>
+    <h2>Cities Information</h2>
     <table class="table">
       <thead>
         <tr>
-          <th>ERNAME</th>
-          <th>SURNAME</th>
-          <th>NAME</th>
-          <th>ADDRESS</th>
-          <th>PHONE</th>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Country</th>
         </tr>
       </thead>
       <tbody>
         
         <tr>
           <td>1</td>
-          <td>Karka</td>
-          <td>Evangelia</td>
-          <td>Kitsi</td>
-          <td>2106948023</td>
+          <td>Athens</td>
+          <td>Greece</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Papadopoulos</td>
-          <td>Sotiris</td>
-          <td>Koropi</td>
-          <td>2103271896</td>
+          <td>Paris</td>
+          <td>France</td>
         </tr>
         
       </tbody>
