--- a/passenger.html
+++ b/passenger.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Airline Company - Staff</title>
+  <title>Airline Company - Passengers</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,49 +17,46 @@
         <svg class="bi me-2" width="40" height="32">
           <use xlink:href="#bootstrap"></use>
         </svg>
-        <span class="fs-4">SwiftSkies - Airline Company</span>
+        <span class="fs-4">Airline Company</span>
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/frontend/index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="passenger.html" class="nav-link">Passengers</a></li>
+        <li class="nav-item"><a href="home.html" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link active">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Staff</a></li>
+        <li class="nav-item"><a href="staff.html" class="nav-link">Staff</a></li>
         <li class="nav-item"><a href="airplane.html" class="nav-link">Airplanes</a></li>
         <li class="nav-item"><a href="city.html" class="nav-link">City</a></li>
       </ul>
     </header>
   </div>
   <div class="container">
-    <h2>Staff Information</h2>
+    <h2>Passengers Information</h2>
     <table class="table">
       <thead>
         <tr>
-          <th>EMPNUM</th>
+          <th>ERNAME</th>
           <th>SURNAME</th>
           <th>NAME</th>
           <th>ADDRESS</th>
           <th>PHONE</th>
-          <th>SALARY</th>
         </tr>
       </thead>
       <tbody>
         
         <tr>
           <td>1</td>
-          <td>Loudaros</td>
-          <td>George</td>
-          <td>Koropi</td>
-          <td>2109653200</td>
-          <td>730,00</td>
-        </tr>
-        <tr>
-          <td>2</td>
           <td>Karka</td>
           <td>Evangelia</td>
           <td>Kitsi</td>
-          <td>2109600100</td>
-          <td>1150,00</td>
+          <td>2106948023</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Papadopoulos</td>
+          <td>Sotiris</td>
+          <td>Koropi</td>
+          <td>2103271896</td>
         </tr>
         
       </tbody>
