--- a/passengers.html
+++ b/passengers.html
@@ -4,16 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Airline Company - Admin Panel</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-  <style>
-    .fa-circle-check,
-    .fa-circle-xmark {
-      cursor: pointer;
-    }
-  </style>
+  <title>Airline Company - Passengers</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -27,47 +21,49 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="passenger.html" class="nav-link">Passengers</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link active">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="staff.html" class="nav-link">Staff</a></li>
         <li class="nav-item"><a href="airplane.html" class="nav-link">Airplanes</a></li>
         <li class="nav-item"><a href="city.html" class="nav-link">City</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Admin</a></li>
       </ul>
     </header>
   </div>
-
   <div class="container">
-    <h2>Admin Panel</h2>
+    <h2>Passengers Information</h2>
     <table class="table">
       <thead>
         <tr>
-          <th>NUM</th>
+          <th>ERNAME</th>
           <th>SURNAME</th>
           <th>NAME</th>
-          <th>EMAIL</th>
-          <th>ROLE</th>
-          <th>RESPONDER</th>
+          <th>ADDRESS</th>
+          <th>PHONE</th>
         </tr>
       </thead>
       <tbody>
-        <?php include 'admin_records.php'; ?>
+        
+        <tr>
+          <td>1</td>
+          <td>Karka</td>
+          <td>Evangelia</td>
+          <td>Kitsi</td>
+          <td>2106948023</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Papadopoulos</td>
+          <td>Sotiris</td>
+          <td>Koropi</td>
+          <td>2103271896</td>
+        </tr>
+        
       </tbody>
     </table>
   </div>
-
-  <!-- Περιέχει σενάρια JavaScript για την αποδοχή και απόρριψη των εγγραφών -->
-  <script>
-    function acceptRecord(id) {
-      // Εδώ θα πρέπει να προσθέσετε κώδικα JavaScript για την αποδοχή της εγγραφής με id=id
-      console.log("Accepted record with id " + id);
-    }
-
-    function rejectRecord(id) {
-      // Εδώ θα πρέπει να προσθέσετε κώδικα JavaScript για την απόρριψη της εγγραφής με id=id
-      console.log("Rejected record with id " + id);
-    }
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
   </script>
 </body>
 
