--- a/registerform.html
+++ b/registerform.html
@@ -42,13 +42,13 @@
                     <form id="loginForm" action="registerform.php" method="post">
                         <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-start">
                             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <button type="button" class="btn btn-primary btn-floating mx-1" style="background-color: #002144;">
                                 <i class="fab fa-facebook-f"></i>
                             </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <button type="button" class="btn btn-primary btn-floating mx-1" style="background-color: #002144;">
                                 <i class="fab fa-twitter"></i>
                             </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <button type="button" class="btn btn-primary btn-floating mx-1" style="background-color: #002144;">
                                 <i class="fab fa-linkedin-in"></i>
                             </button>
                         </div>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="text-center text-md-start mt-4 pt-2">
-                            <button type="submit" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
+                            <button type="submit" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #002144;">Sign Up</button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="loginform.html" class="link-danger">Login</a></p>
                         </div>
                     </form>
