--- a/login.html
+++ b/login.html
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="loginAregister.css">
     <style>
         .logo-container img {
-            width: px; /* Προσαρμόστε το πλάτος της εικόνας όπως επιθυμείτε */
-            height: auto; /* Αυτόματο ύψος */
+            width: px; 
+            height: auto;
         }
         .wrapper {
-            margin-top: -500px; /* Προσαρμόστε την απόσταση από την κορυφή της σελίδας όπως επιθυμείτε */
+            margin-top: -500px; 
         }
     </style>
 </head>
@@ -34,7 +34,7 @@
 </div>
 
 <div class="wrapper">
-    <div class="title text-center"> <!-- Προσθήκη text-center για ευθυγράμμιση στο κέντρο -->
+    <div class="title text-center">
         Login Form
     </div>
     <form action="login.php" method="post">
@@ -55,10 +55,10 @@
                 <a href="#">Forgot password?</a>
             </div>
         </div>
-        <div class="field text-center"> <!-- Προσθήκη text-center για ευθυγράμμιση στο κέντρο -->
+        <div class="field text-center"> 
             <input type="submit" value="Login">
         </div>
-        <div class="signup-link text-center"> <!-- Προσθήκη text-center για ευθυγράμμιση στο κέντρο -->
+        <div class="signup-link text-center">
             Not a member? <a href="register.html">Signup now</a>
         </div>
     </form>
