--- a/adminpanel/dashboard/index.html
+++ b/adminpanel/dashboard/index.html
@@ -196,7 +196,7 @@
             <div class="details">
                 <div class="recentOrders">
                     <div class="cardHeader">
-                        <h2>Recent Orders</h2>
+                        <h2>Fligts</h2>
                         <a href="#" class="btn">View All</a>
                     </div>
 
@@ -273,7 +273,7 @@
                 <!-- ================= New Customers ================ -->
                 <div class="recentCustomers">
                     <div class="cardHeader">
-                        <h2>Recent Customers</h2>
+                        <h2>Customers</h2>
                     </div>
 
                     <table>
@@ -282,7 +282,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>David <br> <span>Italy</span></h4>
+                                <h4>David</h4>
                             </td>
                         </tr>
 
@@ -291,7 +291,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>Amit <br> <span>India</span></h4>
+                                <h4>Amit</h4>
                             </td>
                         </tr>
 
@@ -300,7 +300,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>David <br> <span>Italy</span></h4>
+                                <h4>David</h4>
                             </td>
                         </tr>
 
@@ -309,7 +309,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>Amit <br> <span>India</span></h4>
+                                <h4>Amit</h4>
                             </td>
                         </tr>
 
@@ -318,7 +318,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>David <br> <span>Italy</span></h4>
+                                <h4>David</h4>
                             </td>
                         </tr>
 
@@ -327,7 +327,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>Amit <br> <span>India</span></h4>
+                                <h4>Amit</h4>
                             </td>
                         </tr>
 
@@ -336,7 +336,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>David <br> <span>Italy</span></h4>
+                                <h4>David</h4>
                             </td>
                         </tr>
 
@@ -345,7 +345,7 @@
                                 <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
                             </td>
                             <td>
-                                <h4>Amit <br> <span>India</span></h4>
+                                <h4>Amit</h4>
                             </td>
                         </tr>
                     </table>
