--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </div>
               <div class="col-md-8">
                   <div class="booking-form">
-                                  <form action="process_booking.php" method="post"> 
+                                  <form action="Flight_Search_Results.php" method="post"> 
                                     <!-- LATHOS -->
                                       <div class="form-group">
                                           <div class="form-checkbox">
