--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="#contact" style="color: #002144; font-weight: bold;">Contact</a>
                 </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="adminlogin.php" style="color: #002144; font-weight: bold;">Admin</a>
+                </li>
               </ul>
               <!-- Login / Sign up -->
               <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3">
