--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 
   <!-- jQuery UI library -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <style>
+    /* Default logo */
+.logo img {
+  content: url('./assets/images/trace.svg');
+}
+
+/* Logo for mobile menu */
+.logo.mobile-open img {
+  content: url('./assets/images/blue.svg'); /* Η εικόνα που θέλετε όταν ανοίγει το μενού */
+}
+
+  </style>
 </head>
 
 <body id="top">
@@ -102,6 +114,12 @@
             </a>
           </li>
 
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
         </ul>
 
         <nav class="navbar" data-navbar>
@@ -146,7 +164,7 @@
             </li>
 
             <li>
-              <a href="#signup" class="navbar-link" data-nav-link>sign up</a>
+              <a href="loginandregister.php" class="navbar-link" data-nav-link>sign up</a>
             </li>
 
           </ul>
@@ -251,9 +269,7 @@
           <h2 class="h2 section-title">Popular destination</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            Discover some of the most popular destinations around the world that are perfect for your next adventure. Each location offers unique experiences and unforgettable memories. Start planning your trip today and explore the beauty and diversity of these amazing places.
           </p>
 
           <ul class="popular-list">
@@ -284,7 +300,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                    Enjoy the charm of San Miguel with its beautiful streets and rich history.
                   </p>
 
                 </div>
@@ -318,7 +334,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                    Take in breathtaking views from the Burj Khalifa and explore Dubai's luxury.
                   </p>
 
                 </div>
@@ -352,7 +368,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                    Experience the tranquility of Kyoto Temple and its historic beauty.
                   </p>
 
                 </div>
@@ -383,9 +399,7 @@
           <h2 class="h2 section-title">Checkout Our Packeges</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            Explore our popular travel packages that offer a perfect blend of adventure, relaxation, and unforgettable experiences. Whether you're looking for a cultural journey, a scenic getaway, or a family vacation, we have something for everyone. Discover exclusive deals and start planning your dream holiday today!
           </p>
 
           <ul class="package-list">
@@ -830,13 +844,11 @@ s\
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/trace.svg" alt="Tourly logo">
+            <img src="./assets/images/trace.svg" alt="SwiftSkies logo">
           </a>
 
           <p class="footer-text">
-            Urna ratione ante harum provident, eleifend, vulputate molestiae proin fringilla, praesentium magna conubia
-            at
-            perferendis, pretium, aenean aut ultrices.
+            Discover new horizons and experience seamless travel with SwiftSkies. Our commitment to exceptional service and unforgettable journeys ensures a smooth and enjoyable flight every time.
           </p>
 
         </div>
