--- a/adminpanel/dashboard/index.html
+++ b/adminpanel/dashboard/index.html
@@ -12,120 +12,125 @@
 </head>
 
 <body>
-    <!-- =============== Navigation ================ -->
-    <div class="container">
-        <div class="navigation">
-            <ul>
-                <li>
-                    <a href="/index.html">
-                        <span class="icon">
-                            <img src="assets/imgs/logo.png" alt="logo" style="height: 30px;">
-                        </span>
-                        <span class="title">SwiftSkies</span>
-                        
-                    </a>
-                </li>
-
-                <li>
-                    <a href="index.html">
-                        <span class="icon">
-                            <ion-icon name="home-outline"></ion-icon>
-                        </span>
-                        <span class="title">Dashboard</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="passengers.php">
-                        <span class="icon">
-                            <ion-icon name="people-outline"></ion-icon>
-                        </span>
-                        <span class="title">Passengers</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="flights.php">
-                        <span class="icon">
-                            <ion-icon name="airplane-outline"></ion-icon>
-                        </span>
-                        <span class="title">Flights</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="airplanes.php">
-                        <span class="icon">
-                            <ion-icon name="airplane-outline" style="transform: rotate(-45deg);"></ion-icon>
-                        </span>
-                        <span class="title">Airplanes</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="staff.php">
-                        <span class="icon">
-                            <ion-icon name="person-outline">></ion-icon>
-                        </span>
-                        <span class="title">Staff</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="city.php">
-                        <span class="icon">
-                            <ion-icon name="globe-outline">></ion-icon>
-                        </span>
-                        <span class="title">City</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="adminprofile.php">
-                        <span class="icon">
-                            <ion-icon name="chatbubble-outline"></ion-icon>
-                        </span>
-                        <span class="title">Admin Profile</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="help.php">
-                        <span class="icon">
-                            <ion-icon name="help-outline"></ion-icon>
-                        </span>
-                        <span class="title">Help</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="setting.php">
-                        <span class="icon">
-                            <ion-icon name="settings-outline"></ion-icon>
-                        </span>
-                        <span class="title">Settings</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="password.php">
-                        <span class="icon">
-                            <ion-icon name="lock-closed-outline"></ion-icon>
-                        </span>
-                        <span class="title">Password</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="signout.php">
-                        <span class="icon">
-                            <ion-icon name="log-out-outline"></ion-icon>
-                        </span>
-                        <span class="title">Sign Out</span>
-                    </a>
-                </li>
-            </ul>
+<!-- Navigation -->
+<div class="container-fluid padding_zero">
+    <div class="navigation">
+    <div class="hamburger" id="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
+        <ul>
+            <li>
+                <a href="./index.html">
+                    <span class="icon">
+                        <img src="assets/imgs/logo.png" alt="logo" style="height: 30px;">
+                    </span>
+                    <span class="title">SwiftSkies</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="index.html">
+                    <span class="icon">
+                        <ion-icon name="home-outline"></ion-icon>
+                    </span>
+                    <span class="title">Dashboard</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="passengers.php">
+                    <span class="icon">
+                        <ion-icon name="people-outline"></ion-icon>
+                    </span>
+                    <span class="title">Passengers</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="flights.php">
+                    <span class="icon">
+                        <ion-icon name="airplane-outline"></ion-icon>
+                    </span>
+                    <span class="title">Flights</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="airplanes.php">
+                    <span class="icon">
+                        <ion-icon name="airplane-outline" style="transform: rotate(-45deg);"></ion-icon>
+                    </span>
+                    <span class="title">Airplanes</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="staff.php">
+                    <span class="icon">
+                        <ion-icon name="person-outline">></ion-icon>
+                    </span>
+                    <span class="title">Staff</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="city.php">
+                    <span class="icon">
+                        <ion-icon name="globe-outline">></ion-icon>
+                    </span>
+                    <span class="title">City</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="register.php">
+                    <span class="icon">
+                        <ion-icon name="chatbubble-outline"></ion-icon>
+                    </span>
+                    <span class="title">Admin Panel</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="help.php">
+                    <span class="icon">
+                        <ion-icon name="help-outline"></ion-icon>
+                    </span>
+                    <span class="title">Help</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="setting.php">
+                    <span class="icon">
+                        <ion-icon name="settings-outline"></ion-icon>
+                    </span>
+                    <span class="title">Settings</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="password.php">
+                    <span class="icon">
+                        <ion-icon name="lock-closed-outline"></ion-icon>
+                    </span>
+                    <span class="title">Password</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="signout.php">
+                    <span class="icon">
+                        <ion-icon name="log-out-outline"></ion-icon>
+                    </span>
+                    <span class="title">Sign Out</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
 
         <!-- ========================= Main ==================== -->
         <div class="main">
@@ -162,22 +167,22 @@
                 <div class="card">
                     <div>
                         <div class="numbers">80</div>
-                        <div class="cardName">Sales</div>
+                        <div class="cardName">Flights</div>
                     </div>
 
                     <div class="iconBx">
-                        <ion-icon name="cart-outline"></ion-icon>
+                        <ion-icon name="airplane-outline"></ion-icon>
                     </div>
                 </div>
 
                 <div class="card">
                     <div>
                         <div class="numbers">284</div>
-                        <div class="cardName">Comments</div>
+                        <div class="cardName">Passengers</div>
                     </div>
 
                     <div class="iconBx">
-                        <ion-icon name="chatbubbles-outline"></ion-icon>
+                        <ion-icon name="people-outline"></ion-icon>
                     </div>
                 </div>
 
@@ -274,7 +279,7 @@
                 <!-- ================= New Customers ================ -->
                 <div class="recentCustomers">
                     <div class="cardHeader">
-                        <h2>Customers</h2>
+                        <h2>Staff</h2>
                     </div>
 
                     <table>
