--- a/adminpanel/dashboard/index.html
+++ b/adminpanel/dashboard/index.html
@@ -178,7 +178,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers">284</div>
-                        <div class="cardName">Passengers</div>
+                        <div class="cardName">Passenger</div>
                     </div>
 
                     <div class="iconBx">
