--- a/index.html
+++ b/index.html
@@ -7,38 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SwiftSkies</title>
 
-  <!-- 
-    - favicon
-  -->
+  <!--- favicon -->
   <link rel="shortcut icon" href="./assets/images/aircraft-logo.png" type="image/svg+xml">
 
-  <!-- 
-    - custom css link
-  -->
+  <!--- custom css link -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- 
-    - google font link
-  -->
+  <!--- google font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-      <!-- jQuery library -->
+  <!-- jQuery library -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- jQuery UI library -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <style>
-.logo img {
-  content: url('./assets/images/trace.svg');
-}
+    .logo img {
+      content: url('./assets/images/trace.svg');
+    }
 
-.logo.mobile-open img {
-  content: url('./assets/images/blue.svg'); 
-}
+    .logo.mobile-open img {
+      content: url('./assets/images/blue.svg'); 
+    }
 
   </style>
 </head>
@@ -174,10 +167,6 @@
 
   </header>
 
-
-
-
-
   <main>
     <article>
 
@@ -200,10 +189,6 @@
 
         </div>
       </section>
-
-
-
-
 
       <!--- #TOUR SEARCH -->
 
@@ -247,8 +232,6 @@
         </div>
     </section>
     
-      
-
       <!--- #POPULAR -->
 
       <section class="popular" id="destination">
@@ -372,10 +355,6 @@
 
         </div>
       </section>
-
-
-
-
 
       <!--- #PACKAGE -->
 
@@ -538,7 +517,6 @@
               </div>
             </li>
 
-
             <li>
               <div class="package-card">
 
@@ -693,10 +671,6 @@
         </div>
       </section>
 
-
-
-
-
       <!--- #GALLERY -->
 
       <section class="gallery" id="gallery">
@@ -785,10 +759,6 @@
         </div>
       </section>
 
-
-
-
-
       <!--- #CTA -->
 
       <section class="cta" id="contact">
@@ -811,9 +781,6 @@
 
     </article>
   </main>
-
-
-
 
 
   <!--- #FOOTER -->
@@ -913,17 +880,11 @@
   </footer>
 
 
-
-
-
   <!--- #GO TO TOP -->
 
   <a href="#top" class="go-top" data-go-top>
     <ion-icon name="chevron-up-outline"></ion-icon>
   </a>
-
-
-
 
 
   <!--- custom js link -->
